2016-03-21  Ben Elliston  <bje@gnu.org>

	* lib/dg.exp (dg-get-options): Clean up regular expression and
	remove FIXME comment about it.

2016-03-20  Ben Elliston  <bje@gnu.org>

	* baseboards/i960-sim.exp: Remove stale ??? comment.
	* config/vxworks.exp: Likewise.

2016-03-20  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Load .dejagnurc last not first.
	(load_file): Update comment about Tcl 7.5a2.
	* doc/user.xml (Customizing DejaGnu): Document new search order
	for site.exp files.
	* doc/dejagnu.texi: Regenerate.
	* NEWS: Update.

2016-03-20  Ben Elliston  <bje@gnu.org>

	* lib/dg.exp (dg-runtest): Improve arg naming to remove a FIXME.

2016-03-20  Ben Elliston  <bje@gnu.org>

	* lib/dg.exp: Remove commented-out calls to send_user.

2016-03-20  Ben Elliston  <bje@gnu.org>

	* runtest.exp (load_file): Remove old comment.

2016-03-20  Ben Elliston  <bje@gnu.org>

	* lib/dg.exp (dg-test): There is no need to call unresolved to
	clear errcnt. Instead, pass 0 as argument 2 to perror.
	* runtest.exp (runtest): Likewise.

2016-03-16  Ben Elliston  <bje@gnu.org>

	Revert this change (the GCC testsuite uses diff):

	2016-03-15  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (diff): Remove proc.
	* doc/ref.xml: Update documentation.
	* doc/dejagnu.texi: Regenerate.
	* NEWS: Update.

2016-03-15  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/options.exp: Properly clean up log files
	left by the runtest under test.

2016-03-15  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/load_lib.exp: Typo fixes.

2016-03-15  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/options.exp: Add more tests.

2016-03-15  Ben Elliston  <bje@gnu.org>

	* testsuite/libdejagnu/tunit.exp: Clean up.

2016-03-15  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (diff): Remove proc.
	* doc/ref.xml: Update documentation.
	* doc/dejagnu.texi: Regenerate.
	* NEWS: Update.

2016-03-15  Ben Elliston  <bje@gnu.org>

	Revert this change:
	2016-02-14  Steve Ellcey  <sellcey@mips.com>
