@@ -1,5 +1,12 @@
 2016-03-21  Ben Elliston  <bje@gnu.org>
 
+	* baseboards/mcore-moto-sim.exp: Remove old FIXME comment.
+	* baseboards/mmixware-sim.exp: Likewise.
+	* config/sim.exp: Likewise.
+	* runtest.exp: Likewise.
+
+2016-03-21  Ben Elliston  <bje@gnu.org>
+
 	* lib/dg.exp (dg-get-options): Clean up regular expression and
 	remove FIXME comment about it.
 
